<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373740"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fon2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:background="#373740"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginTop="5dp"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/vartist_za"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText2"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:ems="3"
                    android:gravity="right"
                    android:hint="дані"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:selectAllOnFocus="true"
                    android:text="2000"
                    android:textColor="@color/colorText"
                    android:textColorLink="@android:color/holo_blue_dark"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginTop="5dp"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/obem"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:ems="3"
                    android:gravity="right"
                    android:hint="дані"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:selectAllOnFocus="true"
                    android:text="1.9"
                    android:textColor="@color/colorText"
                    android:textColorLink="@android:color/holo_blue_dark"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="0dp"
                android:baselineAligned="true"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.32"
                    android:text="@string/rik"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:ems="3"
                    android:gravity="right"
                    android:hint="дані"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:numeric="integer|signed|decimal"
                    android:selectAllOnFocus="true"
                    android:text="10"
                    android:textColor="@color/colorText"
                    android:textColorLink="@android:color/holo_blue_dark"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="0dp"
                android:layout_marginTop="5dp"
                android:baselineAligned="true"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/inwe"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:ems="3"
                    android:gravity="right"
                    android:hint="дані"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:numeric="integer|signed|decimal"
                    android:selectAllOnFocus="true"
                    android:text="500"
                    android:textColor="@color/colorText"
                    android:textColorLink="@android:color/holo_blue_dark"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:baselineAligned="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/tip_dvs"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/radius"
                    android:gravity="center"
                    android:onClick="onClick_dim"
                    android:text="@string/benzo"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/radius2"
                    android:gravity="center"
                    android:onClick="onClick_dim2"
                    android:text="@string/dizel"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/background_light"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="75"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#373740"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/povna_vartist"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText2"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:singleLine="false"
                    android:text="0.0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:theme="@style/AppTheme" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/job2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginTop="5dp"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView122"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="@string/mito"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView143"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0"
                    android:singleLine="false"
                    android:text="0.0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:theme="@style/AppTheme" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="0dp"
                android:baselineAligned="true"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView222"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"

                    android:layout_weight="0.32"
                    android:text="@string/akciz"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView242"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:text="0.0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="0dp"
                android:layout_marginTop="5dp"
                android:baselineAligned="true"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="@string/pdv"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0"
                    android:autoText="false"
                    android:singleLine="false"
                    android:text="0.0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:theme="@style/AppTheme" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:baselineAligned="true"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:text="@string/pensi_fond"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:text="0.0"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorText"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>